fix(layout): use dvh instead of vh to fix mobile overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,8 +2,8 @@
 
 @theme {
 	--font-sans: 'Inter', sans-serif;
-	--height-content: calc(100vh - 3rem - 5rem - 0.125rem - 0.5rem);
-	--height-slideover: calc(100vh - 3rem - 0.125rem);
+	--height-content: calc(100dvh - 3rem - 5rem - 0.125rem - 0.5rem);
+	--height-slideover: calc(100dvh - 3rem - 0.125rem);
 }
 
 @font-face {
